# mandelbrot

./: .gitmodules  CMakeLists.txt  README.md  complex.c  complex.h  constants.c  constants.h  draw.c  draw.h  keyboard.c  keyboard.h  loop.c  loop.h  main.c  main.h  mandel.c  mandel.h  mandle.c  mandle.h  matrixd.c  matrixd.h  player.c  player.h  vector.c  vector.h
